Fixed text alignment in Search component title

--- a/src/pages/Search/search.css
+++ b/src/pages/Search/search.css
@@ -21,6 +21,7 @@
     width:100%;
 }
 .search-result-title{
+    text-align: center;
     color:#113036;
 }
 .search-result-title h1{
